--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sax",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.coffee",
   "scripts": {
@@ -15,7 +15,7 @@
     "parser"
   ],
   "author": "Daniel Pecos Martinez",
-  "license": "BSD-2-Clause",
+  "license": "Apache",
   "bugs": {
     "url": "https://github.com/dpecos/node-sax/issues"
   },
